--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@ai-sdk/groq": "^2.0.0",
     "@ai-sdk/openai": "^2.0.4",
     "@anthropic-ai/sdk": "^0.57.0",
+    "@computesdk/client": "^0.3.5",
     "@computesdk/daytona": "^1.5.6",
     "@computesdk/e2b": "^1.6.6",
     "@computesdk/vercel": "^1.5.9",
@@ -83,6 +84,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
+    "ws": "^8.18.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
