--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@anthropic-ai/sdk": "^0.57.0",
     "@computesdk/daytona": "^1.5.6",
     "@computesdk/e2b": "^1.6.6",
+    "@computesdk/modal": "^1.4.8",
     "@computesdk/vercel": "^1.5.9",
     "@e2b/code-interpreter": "^2.0.0",
     "@mendable/firecrawl-js": "^4.3.3",
