--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@computesdk/client": "^0.3.5",
     "@computesdk/daytona": "^1.5.6",
     "@computesdk/e2b": "^1.6.6",
+    "@computesdk/modal": "^1.7.0",
     "@computesdk/vercel": "^1.5.9",
     "@e2b/code-interpreter": "^2.0.0",
     "@mendable/firecrawl-js": "^4.3.3",
