--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@ai-sdk/groq": "^2.0.0",
     "@ai-sdk/openai": "^2.0.4",
     "@anthropic-ai/sdk": "^0.57.0",
+    "@computesdk/daytona": "^1.6.5",
+    "@computesdk/e2b": "^1.7.5",
+    "@computesdk/modal": "^1.8.0",
+    "@computesdk/vercel": "^1.6.5",
     "@e2b/code-interpreter": "^2.0.0",
     "@mendable/firecrawl-js": "^4.3.3",
     "@radix-ui/react-accordion": "^1.2.12",
