--- a/.env.example
+++ b/.env.example
@@ -1,46 +1,106 @@
-# Required
-FIRECRAWL_API_KEY=your_firecrawl_api_key  # Get from https://firecrawl.dev (Web scraping)
-
-# =================================================================================
-# SANDBOX PROVIDER - Choose Option 1 OR 2
-# =================================================================================
-
-# Option 1: Vercel Sandbox (recommended - default)
-# Set SANDBOX_PROVIDER=vercel and choose authentication method below
-SANDBOX_PROVIDER=vercel
-
-# Vercel Authentication - Choose method a OR b
-# Method a: OIDC Token (recommended for development)
-# Run `vercel link` then `vercel env pull` to get VERCEL_OIDC_TOKEN automatically
-VERCEL_OIDC_TOKEN=auto_generated_by_vercel_env_pull
-
-# Method b: Personal Access Token (for production or when OIDC unavailable)
-# VERCEL_TEAM_ID=team_xxxxxxxxx      # Your Vercel team ID 
-# VERCEL_PROJECT_ID=prj_xxxxxxxxx    # Your Vercel project ID
-# VERCEL_TOKEN=vercel_xxxxxxxxxxxx   # Personal access token from Vercel dashboard
-
-# Get yours at https://console.groq.com
-GROQ_API_KEY=your_groq_api_key_here
-
-=======
-# Option 2: E2B Sandbox
-# Set SANDBOX_PROVIDER=e2b and configure E2B_API_KEY below
-# SANDBOX_PROVIDER=e2b
-# E2B_API_KEY=your_e2b_api_key  # Get from https://e2b.dev
-
-# =================================================================================
-# AI PROVIDERS - Need at least one
-# =================================================================================
-
-# Vercel AI Gateway (recommended - provides access to multiple models)
-AI_GATEWAY_API_KEY=your_ai_gateway_api_key  # Get from https://vercel.com/dashboard/ai-gateway/api-keys
-
-# Individual provider keys (used when AI_GATEWAY_API_KEY is not set)
+# ===================================================================================
+#                           OPEN LOVABLE CONFIGURATION
+# ===================================================================================
+#
+# QUICK START:
+#   1. Set FIRECRAWL_API_KEY (required for web scraping)
+#   2. Set at least one AI provider key
+#   3. Choose at least one sandbox provider and set its credentials
+#
+# ===================================================================================
+#
+#
+# -----------------------------------------------------------------------------------
+# SECTION 1: WEB SCRAPING (Required)
+# -----------------------------------------------------------------------------------
+#
+FIRECRAWL_API_KEY=your_firecrawl_api_key
+# Get from: https://firecrawl.dev
+#
+#
+# -----------------------------------------------------------------------------------
+# SECTION 2: AI PROVIDERS (At least one required)
+# -----------------------------------------------------------------------------------
+#
+# OPTION A: Use Vercel AI Gateway (recommended - single key for multiple models)
+#
+# AI_GATEWAY_API_KEY=your_ai_gateway_api_key
+# Get from: https://vercel.com/dashboard/ai-gateway/api-keys
+#
+# -OR-
+#
+# OPTION B: Use individual provider keys directly
+#
 ANTHROPIC_API_KEY=your_anthropic_api_key  # Get from https://console.anthropic.com
 OPENAI_API_KEY=your_openai_api_key  # Get from https://platform.openai.com (GPT-5)
 GEMINI_API_KEY=your_gemini_api_key  # Get from https://aistudio.google.com/app/apikey
 GROQ_API_KEY=your_groq_api_key  # Get from https://console.groq.com (Fast inference - Kimi K2 recommended)
-
+#
 # Optional Morph Fast Apply
 # Get yours at https://morphllm.com/
 MORPH_API_KEY=your_fast_apply_key
+#
+#
+# -----------------------------------------------------------------------------------
+# SECTION 3: SANDBOX PROVIDER (At least one required)
+# -----------------------------------------------------------------------------------
+#
+# Choose ONE sandbox provider by uncommenting the appropriate SANDBOX_PROVIDER line
+# and filling in the required credentials for that provider.
+#
+# IMPORTANT NOTES:
+#   - Daytona and Modal require a ComputeSDK API key
+#   - Vercel and E2B can work with OR without ComputeSDK
+#   - Using "compute" as provider gives access to all sandbox options via ComputeSDK
+# -----------------------------------------------------------------------------------
+#
+SANDBOX_PROVIDER=compute
+#
+# -----------------------------------------------------------------------------------
+# 3A. ComputeSDK Gateway (Default - provides access to all sandbox providers)
+# -----------------------------------------------------------------------------------
+# When SANDBOX_PROVIDER=compute, you can use ANY sandbox provider by uncommenting
+# the API keys below.
+# The system auto-detects which provider credentials you've configured.
+#
+COMPUTESDK_API_KEY=your_api_key_here
+#
+# -----------------------------------------------------------------------------------
+# 3B. Vercel Sandbox
+# -----------------------------------------------------------------------------------
+# SANDBOX_PROVIDER=vercel
+#
+# Vercel Authentication - Choose method a OR b
+# Method a: OIDC Token (recommended for development)
+# Run `vercel link` then `vercel env pull` to get VERCEL_OIDC_TOKEN automatically
+VERCEL_OIDC_TOKEN=auto_generated_by_vercel_env_pull
+#
+# Method b: Personal Access Token (for production or when OIDC unavailable)
+# VERCEL_TEAM_ID=team_xxxxxxxxx      # Your Vercel team ID 
+# VERCEL_PROJECT_ID=prj_xxxxxxxxx    # Your Vercel project ID
+# VERCEL_TOKEN=vercel_xxxxxxxxxxxx   # Personal access token from Vercel dashboard
+#
+# -----------------------------------------------------------------------------------
+# 3C. E2B Sandbox
+# -----------------------------------------------------------------------------------
+# SANDBOX_PROVIDER=e2b
+#
+# E2B_API_KEY=your_e2b_api_key
+# Get from: https://e2b.dev
+#
+# -----------------------------------------------------------------------------------
+# 3D. Modal Sandbox (Requires ComputeSDK API Key)
+# -----------------------------------------------------------------------------------
+# SANDBOX_PROVIDER=modal
+#
+# MODAL_TOKEN_ID=your_token_id_here
+# MODAL_TOKEN_SECRET=your_token_secret_here
+# Get from: https://modal.com
+#
+# -----------------------------------------------------------------------------------
+# 3E. Daytona Sandbox (Requires ComputeSDK API Key)
+# -----------------------------------------------------------------------------------
+# SANDBOX_PROVIDER=daytona
+#
+DAYTONA_API_KEY=your_daytona_api_key_here
+# Get from: https://daytona.io
