--- a/.env.example
+++ b/.env.example
@@ -1,82 +1,66 @@
-# ===================================================================================
-#                           OPEN LOVABLE CONFIGURATION
-# ===================================================================================
-#
-# QUICK START:
-#   1. Set FIRECRAWL_API_KEY (required for web scraping)
-#   2. Set at least one AI provider key
-#   3. Set COMPUTESDK_API_KEY and configure at least one sandbox backend
-#
-# ===================================================================================
-#
-#
-# -----------------------------------------------------------------------------------
-# SECTION 1: WEB SCRAPING (Required)
-# -----------------------------------------------------------------------------------
-#
-FIRECRAWL_API_KEY=your_firecrawl_api_key
-# Get from: https://firecrawl.dev
-#
-#
-# -----------------------------------------------------------------------------------
-# SECTION 2: AI PROVIDERS (At least one required)
-# -----------------------------------------------------------------------------------
-#
-# OPTION A: Use Vercel AI Gateway (recommended - single key for multiple models)
-#
-# AI_GATEWAY_API_KEY=your_ai_gateway_api_key
-# Get from: https://vercel.com/dashboard/ai-gateway/api-keys
-#
-# -OR-
-#
-# OPTION B: Use individual provider keys directly
-#
+# Required
+FIRECRAWL_API_KEY=your_firecrawl_api_key  # Get from https://firecrawl.dev (Web scraping)
+COMPUTESDK_API_KEY=your_api_key_here  # Get from: https://www.computesdk.com/ (Sandbox creation)
+
+# =================================================================================
+# SANDBOX PROVIDER - Add provider variables (auto-detected) 
+# =================================================================================
+
+# Option 1: Vercel Sandbox (recommended - default)
+# Vercel Authentication - Choose method a OR b
+# Method a: OIDC Token (recommended for development)
+# Run `vercel link` then `vercel env pull` to get VERCEL_OIDC_TOKEN automatically
+VERCEL_OIDC_TOKEN=auto_generated_by_vercel_env_pull
+
+# Method b: Personal Access Token (for production or when OIDC unavailable)
+# VERCEL_TEAM_ID=team_xxxxxxxxx      # Your Vercel team ID 
+# VERCEL_PROJECT_ID=prj_xxxxxxxxx    # Your Vercel project ID
+# VERCEL_TOKEN=vercel_xxxxxxxxxxxx   # Personal access token from Vercel dashboard
+
+# Get yours at https://console.groq.com
+GROQ_API_KEY=your_groq_api_key_here
+
+=======
+# Option 2: E2B Sandbox
+# E2B_API_KEY=your_e2b_api_key  # Get from https://e2b.dev
+
+=======
+# Option 3: Modal Sandbox
+# MODAL_TOKEN_ID=your_token_id_here # Get from: https://modal.com
+# MODAL_TOKEN_SECRET=your_token_secret_here
+
+=======
+# Option 4: Daytona Sandbox
+# DAYTONA_API_KEY=your_daytona_api_key_here # Get from: https://daytona.io
+
+=======
+# Option 5: Railway Sandbox
+# RAILWAY_API_KEY=your_railway_api_key
+# RAILWAY_PROJECT_ID=your_railway_project_id
+# RAILWAY_ENVIRONMENT_ID=your_railway_environment_id
+
+=======
+# Option 6: Namespace Sandbox
+# NSC_TOKEN=your_nsc_token
+
+=======
+# Option 7: Blaxel Sandbox
+# BL_API_KEY=your_blaxel_api_key
+# BL_WORKSPACE=your_blaxel_workspace
+
+# =================================================================================
+# AI PROVIDERS - Need at least one
+# =================================================================================
+
+# Vercel AI Gateway (recommended - provides access to multiple models)
+AI_GATEWAY_API_KEY=your_ai_gateway_api_key  # Get from https://vercel.com/dashboard/ai-gateway/api-keys
+
+# Individual provider keys (used when AI_GATEWAY_API_KEY is not set)
 ANTHROPIC_API_KEY=your_anthropic_api_key  # Get from https://console.anthropic.com
 OPENAI_API_KEY=your_openai_api_key  # Get from https://platform.openai.com (GPT-5)
 GEMINI_API_KEY=your_gemini_api_key  # Get from https://aistudio.google.com/app/apikey
 GROQ_API_KEY=your_groq_api_key  # Get from https://console.groq.com (Fast inference - Kimi K2 recommended)
-#
+
 # Optional Morph Fast Apply
 # Get yours at https://morphllm.com/
-# MORPH_API_KEY=your_fast_apply_key
-#
-#
-# -----------------------------------------------------------------------------------
-# SECTION 3: SANDBOX PROVIDER (Required)
-# -----------------------------------------------------------------------------------
-#
-# ComputeSDK provides access to multiple sandbox backends (Vercel, E2B, Modal, Daytona).
-# Set your ComputeSDK API key and configure credentials for the sandbox backend(s) you want to use.
-#
-# -----------------------------------------------------------------------------------
-
-COMPUTESDK_API_KEY=your_api_key_here
-# Get from: https://www.computesdk.com/
-
-# -----------------------------------------------------------------------------------
-# Sandbox Backend Credentials (configure at least one)
-# -----------------------------------------------------------------------------------
-
-# --- Vercel Sandbox ---
-# Authentication Method 1: OIDC Token (recommended for development)
-# Run `vercel link` then `vercel env pull` to get VERCEL_OIDC_TOKEN automatically
-VERCEL_OIDC_TOKEN=auto_generated_by_vercel_env_pull
-#
-# Authentication Method 2: Personal Access Token (for production)
-# VERCEL_TEAM_ID=team_xxxxxxxxx
-# VERCEL_PROJECT_ID=prj_xxxxxxxxx
-# VERCEL_TOKEN=vercel_xxxxxxxxxxxx
-# Get from: https://vercel.com/
-
-# --- E2B Sandbox ---
-# E2B_API_KEY=your_e2b_api_key
-# Get from: https://e2b.dev
-
-# --- Modal Sandbox ---
-# MODAL_TOKEN_ID=your_token_id_here
-# MODAL_TOKEN_SECRET=your_token_secret_here
-# Get from: https://modal.com
-
-# --- Daytona Sandbox ---
-# DAYTONA_API_KEY=your_daytona_api_key_here
-# Get from: https://daytona.io
+MORPH_API_KEY=your_fast_apply_key
